syntax = "proto3";

package majong;

import "common.proto";
import "states.proto";
import "events.proto";

// Player 玩家数据
message Player {
    uint64 palyer_id = 1;               // 玩家 ID 
    repeated Card hand_cards = 2;       // 玩家手牌
    repeated Card out_cards = 3;        // 玩家打出的牌
    repeated Card chi_cards = 4;        // 玩家吃的牌
    repeated Card peng_cards = 5;       // 玩家碰的牌
    repeated Card hu_cards = 6;         // 玩家胡的牌
    repeated Card gang_cards = 7;       // 玩家杠的牌
}

// AutoEvent 自动事件
message AutoEvent {
    EventID event_id = 1;       // 事件 ID 
    bytes event_context = 2;    // 事件现场
}

// MajongContext 麻将现场
message MajongContext {
    int32 game_id = 1;              // 游戏 ID 
    StateID cur_state = 2;          // 当前状态
    repeated Player players = 3;    // 玩家列表
    uint64 active_player = 4;       // 当前轮次的玩家 ID
    AutoEvent auto_event = 5;       // 需要自动触发的事件
    repeated Card wall_cards = 6;   // 墙牌
}

